[gd_scene load_steps=11 format=4 uid="uid://ck0lfko0ayr2l"]

[ext_resource type="Script" uid="uid://doiygfqfxs7le" path="res://scenes/ghosts/ghosts.gd" id="1_af0an"]
[ext_resource type="PackedScene" uid="uid://do5q0ccp36hbm" path="res://scenes/ghosts/ghost.tscn" id="2_6k4fd"]
[ext_resource type="SpriteFrames" uid="uid://c8inyipwm2ly2" path="res://scenes/ghosts/pinky_sprite_frames.tres" id="3_qeybk"]
[ext_resource type="SpriteFrames" uid="uid://c5a87yxul3go5" path="res://scenes/ghosts/inky_sprite_frames.tres" id="4_07kef"]
[ext_resource type="SpriteFrames" uid="uid://ckbag7ue1x50b" path="res://scenes/ghosts/clyde_sprite_frames.tres" id="5_afnvi"]
[ext_resource type="TileSet" uid="uid://guqe5ya1mek0" path="res://tiles/tile_set.tres" id="7_qeybk"]

[sub_resource type="LabelSettings" id="LabelSettings_j5wjh"]
line_spacing = 0.0
font_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_6k4fd"]
font_size = 8
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qeybk"]
font_size = 8

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_07kef"]
blend_mode = 1

[node name="Ghosts" type="Node2D"]
script = ExtResource("1_af0an")

[node name="Blinky" parent="." groups=["ghosts"] instance=ExtResource("2_6k4fd")]
unique_name_in_owner = true
position = Vector2(112, 116)

[node name="Pinky" parent="." groups=["ghosts"] instance=ExtResource("2_6k4fd")]
unique_name_in_owner = true
position = Vector2(112, 140)
scatter_coordinates = Vector2i(2, 0)
is_inside_the_ghost_house = true
_direction = Vector2i(0, -1)
sprite_frames = ExtResource("3_qeybk")
ghost_color = Color(1, 0.717647, 1, 0.6)

[node name="Inky" parent="." groups=["ghosts"] instance=ExtResource("2_6k4fd")]
unique_name_in_owner = true
position = Vector2(96, 140)
scatter_coordinates = Vector2i(27, 35)
_target_inside_the_house = Vector2i(12, 18)
is_inside_the_ghost_house = true
locked_inside_the_ghost_house = true
_direction = Vector2i(0, -1)
sprite_frames = ExtResource("4_07kef")
ghost_color = Color(0, 1, 1, 0.6)

[node name="Clyde" parent="." groups=["ghosts"] instance=ExtResource("2_6k4fd")]
unique_name_in_owner = true
position = Vector2(128, 140)
scatter_coordinates = Vector2i(1, 35)
_target_inside_the_house = Vector2i(16, 18)
is_inside_the_ghost_house = true
locked_inside_the_ghost_house = true
_direction = Vector2i(0, -1)
sprite_frames = ExtResource("5_afnvi")
ghost_color = Color(1, 0.717647, 0.317647, 0.6)

[node name="ScatterChaseTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="ScatterLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 198.0
offset_top = 116.0
offset_right = 207.0
offset_bottom = 123.0
text = "000"
label_settings = SubResource("LabelSettings_j5wjh")
horizontal_alignment = 1

[node name="ChaseLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 17.0
offset_top = 116.0
offset_right = 26.0
offset_bottom = 123.0
text = "000"
label_settings = SubResource("LabelSettings_j5wjh")
horizontal_alignment = 1

[node name="GlobalCountLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 172.0
offset_top = 12.0
offset_right = 215.0
offset_bottom = 19.0
text = "Global Count: 000"
label_settings = SubResource("LabelSettings_j5wjh")
horizontal_alignment = 1

[node name="ExitTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="ExitTimerLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 172.0
offset_top = 4.0
offset_right = 215.0
offset_bottom = 11.0
text = "Exit Timer: "
label_settings = SubResource("LabelSettings_j5wjh")

[node name="FrightTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ElroyIndicator" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AAAQAA0AAwAEABQAAAARAA0AAwALABQAAAASAA0AAwACABUAAAATAA0AAwAOABQAAAAUAA0AAwAJABUAAAA=")
tile_set = ExtResource("7_qeybk")

[node name="GhostHUD" type="TileMapLayer" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAADABsAAwACAAAAAAAEABsAAwAHAAAAAAAFABsAAwAAAAAAAAAGABsAAwADAAEAAAAHABsAAwAEAAAAAAAvABsAAwADAAEAAAAwABsAAwACAAAAAAAxABsAAwAAAAAAAAAyABsAAwAEAAEAAAAzABsAAwAEAAEAAAA0ABsAAwAEAAAAAAA1ABsAAwACAAEAAAAEAB0AAwAAAAIAAAAFAB0AAwAAAAIAAAAGAB0AAwAAAAIAAAAHAB0AAwAAAAIAAAADAB0AAwAAAAIAAAAyAB0AAwAAAAIAAAA=")
tile_set = ExtResource("7_qeybk")

[node name="BlinkySpeedLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 153.0
offset_right = 31.0
offset_bottom = 164.167
text = "100%"
label_settings = SubResource("LabelSettings_6k4fd")

[node name="GhostsSpeedLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 164.0
offset_right = 31.0
offset_bottom = 175.167
text = "100%"
label_settings = SubResource("LabelSettings_qeybk")

[node name="Walls" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_07kef")
tile_map_data = PackedByteArray("AAAAAAQAAAAcAAMAAAAAAAUAAAAcAAMAAAAAAAYAAAAcAAMAAAAAAAcAAAAcAAMAAAAAAAgAAAAcAAMAAAAAAAkAAAAcAAMAAAAAAAoAAAAcAAMAAAAAAAsAAAAcAAMAAAAAAAwAAAAeAAMAAAAAABcAAAAcAAMAAAAAABgAAAAcAAMAAAAAABkAAAAcAAMAAAAAABoAAAAcAAMAAAAAABsAAAAgAAMAAAAAABwAAAAiAAMAAAAAAB0AAAAcAAMAAAAAAB4AAAAcAAMAAAAAAB8AAAAcAAMAAAAAACAAAAAcAAMAAAAAACEAAAAeAAMAAAABABwAAAAeAAQAAAACAAYAAAAiAAQAAAACAAcAAAAkAAQAAAACAAoAAAAkAAQAAAACABkAAAAkAAQAAAACABwAAAAjAAQAAAACAB8AAAAkAAQAAAADAAoAAAAdAAQAAAADABkAAAAdAAQAAAADAB8AAAAdAAQAAAAEAAoAAAAdAAQAAAAEABkAAAAcAAUAAAAEABoAAAAiAAQAAAAEABsAAAAiAAQAAAAEABwAAAAkAAQAAAAEAB8AAAAdAAQAAAAFAAYAAAAhAAQAAAAFAAcAAAAjAAQAAAAFAAoAAAAjAAQAAAAFAA0AAAAcAAMAAAAFAA4AAAAcAAMAAAAFAA8AAAAcAAMAAAAFABAAAAAjAAQAAAAFABMAAAAcAAMAAAAFABQAAAAcAAMAAAAFABUAAAAcAAMAAAAFABYAAAAjAAQAAAAFABkAAAAhAAQAAAAFABoAAAAhAAQAAAAFABsAAAAhAAQAAAAFABwAAAAjAAQAAAAFAB8AAAAdAAQAAAAGAB8AAAAdAAQAAAAHAAYAAAAiAAQAAAAHAAcAAAAkAAQAAAAHAAoAAAAiAAQAAAAHAAsAAAAiAAQAAAAHAAwAAAAiAAQAAAAHAA0AAAAiAAQAAAAHAA4AAAAiAAQAAAAHAA8AAAAiAAQAAAAHABAAAAAkAAQAAAAHABMAAAAiAAQAAAAHABQAAAAiAAQAAAAHABUAAAAiAAQAAAAHABYAAAAkAAQAAAAHABkAAAAkAAQAAAAHABwAAAAiAAQAAAAHAB0AAAAiAAQAAAAHAB4AAAAeAAUAAAAHAB8AAAAdAAQAAAAIAAoAAAAhAAQAAAAIAAsAAAAhAAQAAAAIAAwAAAAdAAUAAAAIAA0AAAAbAAUAAAAIAA4AAAAhAAQAAAAIAA8AAAAhAAQAAAAIABAAAAAjAAQAAAAIABMAAAAhAAQAAAAIABQAAAAhAAQAAAAIABUAAAAhAAQAAAAIABYAAAAjAAQAAAAIABkAAAAdAAQAAAAIABwAAAAhAAQAAAAIAB0AAAAhAAQAAAAIAB4AAAAdAAUAAAAIAB8AAAAdAAQAAAAJAA0AAAAdAAQAAAAJABkAAAAdAAQAAAAJAB8AAAAdAAQAAAAKAAoAAAAkAAQAAAAKAA0AAAAdAAQAAAAKABAAAAAbAAMAAAAKABEAAAAbAAMAAAAKABIAAAAbAAMAAAAKABMAAAAoAAQAAAAKABYAAAAkAAQAAAAKABkAAAAdAAQAAAAKABwAAAAkAAQAAAAKAB8AAAAdAAQAAAALAAYAAAAhAAQAAAALAAcAAAAjAAQAAAALAAoAAAAdAAQAAAALAA0AAAAjAAQAAAALABYAAAAdAAQAAAALABkAAAAjAAQAAAALABwAAAAdAAQAAAALAB8AAAAjAAQAAAAMAAoAAAAdAAQAAAAMABYAAAAdAAQAAAAMABwAAAAdAAQAAAANAAQAAAAiAAQAAAANAAUAAAAiAAQAAAANAAYAAAAiAAQAAAANAAcAAAAkAAQAAAANAAoAAAAcAAUAAAANAAsAAAAiAAQAAAANAAwAAAAiAAQAAAANAA0AAAAkAAQAAAANABYAAAAcAAUAAAANABcAAAAiAAQAAAANABgAAAAiAAQAAAANABkAAAAkAAQAAAANABwAAAAcAAUAAAANAB0AAAAiAAQAAAANAB4AAAAiAAQAAAANAB8AAAAkAAQAAAAOAAQAAAAhAAQAAAAOAAUAAAAhAAQAAAAOAAYAAAAhAAQAAAAOAAcAAAAjAAQAAAAOAAoAAAAbAAUAAAAOAAsAAAAhAAQAAAAOAAwAAAAhAAQAAAAOAA0AAAAjAAQAAAAOABYAAAAbAAUAAAAOABcAAAAhAAQAAAAOABgAAAAhAAQAAAAOABkAAAAjAAQAAAAOABwAAAAbAAUAAAAOAB0AAAAhAAQAAAAOAB4AAAAhAAQAAAAOAB8AAAAjAAQAAAAPAAoAAAAdAAQAAAAPABYAAAAdAAQAAAAPABwAAAAdAAQAAAAQAAYAAAAiAAQAAAAQAAcAAAAkAAQAAAAQAAoAAAAdAAQAAAAQAA0AAAAkAAQAAAAQABYAAAAdAAQAAAAQABkAAAAkAAQAAAAQABwAAAAdAAQAAAAQAB8AAAAkAAQAAAARAAoAAAAjAAQAAAARAA0AAAAdAAQAAAARABAAAAAcAAMAAAARABEAAAAcAAMAAAARABIAAAAcAAMAAAARABMAAAAnAAQAAAARABYAAAAjAAQAAAARABkAAAAdAAQAAAARABwAAAAjAAQAAAARAB8AAAAdAAQAAAASAA0AAAAdAAQAAAASABkAAAAdAAQAAAASAB8AAAAdAAQAAAATAAoAAAAiAAQAAAATAAsAAAAiAAQAAAATAAwAAAAeAAUAAAATAA0AAAAcAAUAAAATAA4AAAAiAAQAAAATAA8AAAAiAAQAAAATABAAAAAkAAQAAAATABMAAAAiAAQAAAATABQAAAAiAAQAAAATABUAAAAiAAQAAAATABYAAAAkAAQAAAATABkAAAAdAAQAAAATABwAAAAiAAQAAAATAB0AAAAiAAQAAAATAB4AAAAeAAUAAAATAB8AAAAdAAQAAAAUAAYAAAAhAAQAAAAUAAcAAAAjAAQAAAAUAAoAAAAhAAQAAAAUAAsAAAAhAAQAAAAUAAwAAAAhAAQAAAAUAA0AAAAhAAQAAAAUAA4AAAAhAAQAAAAUAA8AAAAhAAQAAAAUABAAAAAjAAQAAAAUABMAAAAhAAQAAAAUABQAAAAhAAQAAAAUABUAAAAhAAQAAAAUABYAAAAjAAQAAAAUABkAAAAjAAQAAAAUABwAAAAhAAQAAAAUAB0AAAAhAAQAAAAUAB4AAAAdAAUAAAAUAB8AAAAdAAQAAAAVAB8AAAAdAAQAAAAWAAYAAAAiAAQAAAAWAAcAAAAkAAQAAAAWAAoAAAAkAAQAAAAWAA0AAAAbAAMAAAAWAA4AAAAbAAMAAAAWAA8AAAAbAAMAAAAWABAAAAAkAAQAAAAWABMAAAAbAAMAAAAWABQAAAAbAAMAAAAWABUAAAAbAAMAAAAWABYAAAAkAAQAAAAWABkAAAAiAAQAAAAWABoAAAAiAAQAAAAWABsAAAAiAAQAAAAWABwAAAAkAAQAAAAWAB8AAAAdAAQAAAAXAAoAAAAdAAQAAAAXABkAAAAbAAUAAAAXABoAAAAhAAQAAAAXABwAAAAjAAQAAAAXAB8AAAAdAAQAAAAYAAoAAAAdAAQAAAAYABkAAAAdAAQAAAAYAB8AAAAdAAQAAAAZAAYAAAAhAAQAAAAZAAcAAAAjAAQAAAAZAAoAAAAjAAQAAAAZABkAAAAjAAQAAAAZABwAAAAkAAQAAAAZAB8AAAAjAAQAAAAaABwAAAAeAAQAAAAbAAQAAAAbAAMAAAAbAAUAAAAbAAMAAAAbAAYAAAAbAAMAAAAbAAcAAAAbAAMAAAAbAAgAAAAbAAMAAAAbAAkAAAAbAAMAAAAbAAoAAAAbAAMAAAAbAAsAAAAbAAMAAAAbAAwAAAAdAAMAAAAbABcAAAAbAAMAAAAbABgAAAAbAAMAAAAbABkAAAAbAAMAAAAbABoAAAAbAAMAAAAbABsAAAAfAAMAAAAbABwAAAAhAAMAAAAbAB0AAAAbAAMAAAAbAB4AAAAbAAMAAAAbAB8AAAAbAAMAAAAbACAAAAAbAAMAAAAbACEAAAAdAAMAAAD+/xAAAAAkAAMAAAD+/xIAAAAlAAMAAAD//xAAAAAkAAMAAAD//xIAAAAlAAMAAAAAAAMAAAAaAAMAAAAAABAAAAAkAAMAAAAAABIAAAAlAAMAAAAAABYAAAAaAAMAAAABAAMAAAAjAAMAAAABAAwAAAAlAAMAAAABABAAAAAkAAMAAAABABIAAAAlAAMAAAABABYAAAAjAAMAAAABABsAAAAnAAMAAAABACEAAAAmAAMAAAACAAMAAAAjAAMAAAACAAUAAAAgAAQAAAACAAkAAAAgAAQAAAACAAwAAAAlAAMAAAACABAAAAAkAAMAAAACABIAAAAlAAMAAAACABYAAAAjAAMAAAACABgAAAAgAAQAAAACABsAAAAfAAQAAAACAB4AAAAgAAQAAAACACEAAAAmAAMAAAADAAMAAAAjAAMAAAADAAUAAAAnAAMAAAADAAcAAAAdAAQAAAADAAkAAAAnAAMAAAADAAwAAAAlAAMAAAADABAAAAAkAAMAAAADABIAAAAlAAMAAAADABYAAAAjAAMAAAADABgAAAAnAAMAAAADAB4AAAAnAAMAAAADACEAAAAmAAMAAAAEAAMAAAAjAAMAAAAEAAUAAAAnAAMAAAAEAAcAAAAdAAQAAAAEAAkAAAAnAAMAAAAEAAwAAAAlAAMAAAAEABAAAAAkAAMAAAAEABIAAAAlAAMAAAAEABYAAAAjAAMAAAAEABgAAAAnAAMAAAAEAB4AAAAnAAMAAAAEACEAAAAmAAMAAAAFAAMAAAAjAAMAAAAFAAUAAAAfAAQAAAAFAAkAAAAfAAQAAAAFAAwAAAAfAAQAAAAFABIAAAAfAAQAAAAFABgAAAAfAAQAAAAFAB4AAAAnAAMAAAAFACEAAAAmAAMAAAAGAAMAAAAjAAMAAAAGAB4AAAAnAAMAAAAGACEAAAAmAAMAAAAHAAMAAAAjAAMAAAAHAAUAAAAgAAQAAAAHAAkAAAAgAAQAAAAHABIAAAAgAAQAAAAHABgAAAAgAAQAAAAHABsAAAAgAAQAAAAHACEAAAAmAAMAAAAIAAMAAAAjAAMAAAAIAAUAAAAnAAMAAAAIAAcAAAAdAAQAAAAIAAkAAAAfAAQAAAAIABIAAAAfAAQAAAAIABgAAAAnAAMAAAAIABsAAAAfAAQAAAAIACEAAAAmAAMAAAAJAAMAAAAjAAMAAAAJAAUAAAAnAAMAAAAJAAcAAAAdAAQAAAAJAAwAAAAnAAMAAAAJABgAAAAnAAMAAAAJAB4AAAAnAAMAAAAJACEAAAAmAAMAAAAKAAMAAAAjAAMAAAAKAAUAAAAnAAMAAAAKAAcAAAAdAAQAAAAKAAkAAAAgAAQAAAAKAAwAAAAnAAMAAAAKAA8AAAAmAAQAAAAKABUAAAAgAAQAAAAKABgAAAAnAAMAAAAKABsAAAAgAAQAAAAKAB4AAAAnAAMAAAAKACEAAAAmAAMAAAALAAMAAAAjAAMAAAALAAUAAAAfAAQAAAALAAkAAAAnAAMAAAALAAwAAAAfAAQAAAALAA8AAAAlAAMAAAALABMAAAAkAAMAAAALABUAAAAnAAMAAAALABgAAAAfAAQAAAALABsAAAAnAAMAAAALAB4AAAAfAAQAAAALACEAAAAmAAMAAAAMAAMAAAAjAAMAAAAMAAkAAAAnAAMAAAAMAA8AAAAaAAUAAAAMABMAAAAkAAMAAAAMABUAAAAnAAMAAAAMABsAAAAnAAMAAAAMACEAAAAmAAMAAAANAAMAAAAkAAUAAAANAAkAAAAnAAMAAAANABMAAAAkAAMAAAANABUAAAAnAAMAAAANABsAAAAnAAMAAAANACEAAAAmAAMAAAAOAAMAAAAjAAUAAAAOAAkAAAAnAAMAAAAOABMAAAAkAAMAAAAOABUAAAAnAAMAAAAOABsAAAAnAAMAAAAOACEAAAAlAAMAAAAPAAMAAAAjAAMAAAAPAAkAAAAnAAMAAAAPABMAAAAkAAMAAAAPABUAAAAnAAMAAAAPABsAAAAnAAMAAAAPACEAAAAlAAMAAAAQAAMAAAAjAAMAAAAQAAUAAAAgAAQAAAAQAAkAAAAnAAMAAAAQAAwAAAAgAAQAAAAQAA8AAAAlAAMAAAAQABMAAAAkAAMAAAAQABUAAAAnAAMAAAAQABgAAAAgAAQAAAAQABsAAAAnAAMAAAAQAB4AAAAgAAQAAAAQACEAAAAmAAMAAAARAAMAAAAjAAMAAAARAAUAAAAnAAMAAAARAAcAAAAdAAQAAAARAAkAAAAfAAQAAAARAAwAAAAnAAMAAAARAA8AAAAlAAQAAAARABUAAAAfAAQAAAARABgAAAAnAAMAAAARABsAAAAfAAQAAAARAB4AAAAnAAMAAAARACEAAAAmAAMAAAASAAMAAAAjAAMAAAASAAUAAAAnAAMAAAASAAcAAAAdAAQAAAASAAwAAAAnAAMAAAASABgAAAAnAAMAAAASAB4AAAAnAAMAAAASACEAAAAmAAMAAAATAAMAAAAjAAMAAAATAAUAAAAnAAMAAAATAAcAAAAdAAQAAAATAAkAAAAgAAQAAAATABIAAAAgAAQAAAATABgAAAAnAAMAAAATABsAAAAgAAQAAAATACEAAAAmAAMAAAAUAAMAAAAjAAMAAAAUAAUAAAAfAAQAAAAUAAkAAAAfAAQAAAAUABIAAAAfAAQAAAAUABgAAAAfAAQAAAAUABsAAAAfAAQAAAAUACEAAAAmAAMAAAAVAAMAAAAjAAMAAAAVAB4AAAAnAAMAAAAVACEAAAAmAAMAAAAWAAMAAAAjAAMAAAAWAAUAAAAgAAQAAAAWAAkAAAAgAAQAAAAWAAwAAAAgAAQAAAAWABIAAAAgAAQAAAAWABgAAAAgAAQAAAAWAB4AAAAnAAMAAAAWACEAAAAmAAMAAAAXAAMAAAAjAAMAAAAXAAUAAAAnAAMAAAAXAAcAAAAdAAQAAAAXAAkAAAAnAAMAAAAXAAwAAAAlAAMAAAAXABAAAAAkAAMAAAAXABIAAAAlAAMAAAAXABYAAAAkAAMAAAAXABgAAAAnAAMAAAAXAB4AAAAnAAMAAAAXACEAAAAmAAMAAAAYAAMAAAAjAAMAAAAYAAUAAAAnAAMAAAAYAAcAAAAdAAQAAAAYAAkAAAAnAAMAAAAYAAwAAAAlAAMAAAAYABAAAAAkAAMAAAAYABIAAAAlAAMAAAAYABYAAAAkAAMAAAAYABgAAAAnAAMAAAAYAB4AAAAnAAMAAAAYACEAAAAmAAMAAAAZAAMAAAAjAAMAAAAZAAUAAAAfAAQAAAAZAAkAAAAfAAQAAAAZAAwAAAAlAAMAAAAZABAAAAAkAAMAAAAZABIAAAAlAAMAAAAZABYAAAAkAAMAAAAZABgAAAAfAAQAAAAZABsAAAAgAAQAAAAZAB4AAAAfAAQAAAAZACEAAAAmAAMAAAAaAAMAAAAjAAMAAAAaAAwAAAAlAAMAAAAaABAAAAAkAAMAAAAaABIAAAAlAAMAAAAaABYAAAAkAAMAAAAaABsAAAAnAAMAAAAaACEAAAAmAAMAAAAbABAAAAAkAAMAAAAbABIAAAAlAAMAAAAbABYAAAAZAAMAAAAcABAAAAAkAAMAAAAcABIAAAAlAAMAAAAdABAAAAAkAAMAAAAdABIAAAAlAAMAAAAXABsAAAAhAAQAAAAbAAMAAAAZAAMAAAAPAA8AAAAZAAUAAAA=")
tile_set = ExtResource("7_qeybk")
